tcw3/designer/tests/bad/objinit_subexpr.tcwdl
pub comp crate::Comp1 {}
pub comp crate::Comp2 {
    // Obj-init cannot be a subexpression
    const comp1 = &crate::Comp1::new! {};
    //~^ ERROR `Component::new!` is unsupported in this position
}
